FIxed the autosuggest overlapping issue

--- a/public/stylesheets/autosuggest.css
+++ b/public/stylesheets/autosuggest.css
@@ -1,16 +1,21 @@
 /* AutoSuggest CSS - Version 1.2 */
 
-/*ul.as-selections {
-	list-style-type: none;
-	border: 1px solid #aaa;
-	padding: 4px 0 4px 4px;
-	margin: 0;
-	overflow: hidden;
-	background-color: #fff;
-	box-shadow:inset 0 1px 2px #888;
-	-webkit-box-shadow:inset 0 1px 2px #888;
-	-moz-box-shadow:inset 0 1px 2px #888;
-}*/
+ul.as-selections {
+	-webkit-box-shadow: 
+		inset 0 0 0 1px #5e5e5e,
+		inset 0 2px 2px rgba(0, 0, 0, 0.4),
+		0 1px 0 rgba(255, 255, 255, 0.35);
+	-moz-box-shadow: 
+		inset 0 0 0 1px #5e5e5e,
+		inset 0 2px 2px rgba(0, 0, 0, 0.4),
+		0 1px 0 rgba(255, 255, 255, 0.35);
+	background: rgb(255, 255, 255);
+	border-radius: 3px;
+	color: rgb(20, 20, 20);
+	display: block;
+	padding: 2px 10px;
+	height: 25px;
+}
 
 ul.as-selections.loading {
 	background-color: #eee;
@@ -100,10 +105,12 @@ ul.as-selections li.as-original {
 }
 
 ul.as-selections li.as-original input {
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	
 	border: none;
 	outline: none;
 	font-size: 13px;
-	width: 300px;
 	height: 18px;
 	padding-top: 3px;
 }
@@ -111,7 +118,7 @@ ul.as-selections li.as-original input {
 ul.as-list {
 	position: absolute;
 	list-style-type: none;
-	margin: 2px 0 0 0;
+	margin: 1px 0 0 0;
 	padding: 0;
 	font-size: 14px;
 	color: #000;
